--- a/week03/수업.md
+++ b/week03/수업.md
@@ -1,1 +1,7 @@
+| 변경 파라미터        | 결과                                                          |
+| -------------- | ----------------------------------------------------------- |
+| `Fs` ↑         | 1초당 샘플 수 ↑ → **frame\_size, hop\_size도 자동 증가** → 모델 입력 길이 ↑ |
+| `frame_size` ↑ | 모델이 한 번에 보는 시간 ↑ → **장기 패턴 학습**, 하지만 연산 느려짐                 |
+| `hop_size` ↓   | 윈도우 간 겹침 ↑ → **데이터 양 증가**, 훈련 시간 ↑                          |
+| `hop_size` ↑   | 윈도우 간 겹침 ↓ → **데이터 양 감소**, 훈련 빠름                            |
 
