--- a/week03/수업.md
+++ b/week03/수업.md
@@ -1,3 +1,12 @@
+| 변수               | 의미                                                | 현재 값                             |
+| ---------------- | ------------------------------------------------- | -------------------------------- |
+| **`Fs`**         | **샘플링 주파수(Hz)**: 1초에 수집되는 센서 데이터 개수               | 20 → 1초에 20개의 데이터                |
+| **`frame_size`** | **한 윈도우가 포함하는 시점 수**:<br>모델이 한 번에 보는 연속된 시간 길이    | `Fs * 4 = 80` → 4초치 데이터          |
+| **`hop_size`**   | **윈도우를 이동시키는 간격**:<br>윈도우 시작점을 몇 시점씩 건너뛰며 이동할지 결정 | `Fs * 2 = 40` → 2초 간격으로 새 윈도우 시작 |
+
+
+
+
 | 변경 파라미터        | 결과                                                          |
 | -------------- | ----------------------------------------------------------- |
 | `Fs` ↑         | 1초당 샘플 수 ↑ → **frame\_size, hop\_size도 자동 증가** → 모델 입력 길이 ↑ |
