--- a/week03/수업.md
+++ b/week03/수업.md
@@ -1,3 +1,23 @@
+6. 라벨(labels)의 의미
+```py
+label = stats.mode(df['label'][i: i + frame_size])[0][0]
+labels.append(label)
+```
+
+
+하나의 윈도우(80개 시점)에는 여러 라벨이 섞여 있을 수 있음.
+
+가장 **많이 등장한 라벨(최빈값)**을 해당 윈도우의 대표 라벨로 사용.
+
+labels는 frames와 1:1 대응하여 학습용 정답(y)으로 사용됨.
+
+
+
+
+
+
+
+
 | 변수               | 의미                                                | 현재 값                             |
 | ---------------- | ------------------------------------------------- | -------------------------------- |
 | **`Fs`**         | **샘플링 주파수(Hz)**: 1초에 수집되는 센서 데이터 개수               | 20 → 1초에 20개의 데이터                |
