--- a/week03/수업.md
+++ b/week03/수업.md
@@ -7,11 +7,13 @@ labels.append(label)
 
 하나의 윈도우(80개 시점)에는 여러 라벨이 섞여 있을 수 있음.
 
-가장 **많이 등장한 라벨(최빈값)**을 해당 윈도우의 대표 라벨로 사용.
+가장 많이 등장한 라벨(최빈값)을 해당 윈도우의 대표 라벨로 사용.
 
 labels는 frames와 1:1 대응하여 학습용 정답(y)으로 사용됨.
 
 
+
+---
 
 
 
