--- a/week03/수업.md
+++ b/week03/수업.md
@@ -1,4 +1,14 @@
-6. 라벨(labels)의 의미
+## frames
+```
+for i in range(0, len(df) - frame_size, hop_size):
+        x = df['x'].values[i: i + frame_size]
+        y = df['y'].values[i: i + frame_size]
+        z = df['z'].values[i: i + frame_size]
+    frames.append([x, y, z])
+```
+
+
+## 라벨(labels)의 의미
 ```py
 label = stats.mode(df['label'][i: i + frame_size])[0][0]
 labels.append(label)
