--- a/week03/수업.md
+++ b/week03/수업.md
@@ -1,4 +1,4 @@
-## frames
+## frames(윈도우)
 ```
 for i in range(0, len(df) - frame_size, hop_size):
         x = df['x'].values[i: i + frame_size]
@@ -6,7 +6,16 @@ for i in range(0, len(df) - frame_size, hop_size):
         z = df['z'].values[i: i + frame_size]
     frames.append([x, y, z])
 ```
+i부터 i + frame_size까지 frame_size 길이만큼 데이터를 슬라이싱.
+x, y, z는 센서의 3축 값
 
+x : 가로 방향의 가속도 (예: 스마트폰의 좌우 움직임)
+
+y : 세로 방향의 가속도 (앞뒤 움직임)
+
+z : 중력 방향의 가속도 (위아래 움직임)
+
+label: 해당 시점의 동작 (예: 걷기, 뛰기 등)
 
 ## 라벨(labels)의 의미
 ```py
