--- a/week03/수업.md
+++ b/week03/수업.md
@@ -34,10 +34,22 @@ labels는 frames와 1:1 대응하여 학습용 정답(y)으로 사용됨.
 
 ---
 
+## reshape 하는 이유
+모델의 기본 입력은 (batch, timesteps, features)
 
+timesteps: 시간축 길이 (예: 80, 128 등)
+features: 센서 축 또는 채널 수 (예: x, y, z → 3)
 
+frames의 shape는 (윈도우 수,3,frame_size)
+첫 번째 축: 윈도우 개수
+두 번째 축: 센서 축 (x, y, z)
+세 번째 축: 시간축
 
+```
+#변환 코드
+frames = np.asarray(frames).reshape(-1, frame_size, N_FEATURES)
 
+```
 
 | 변수               | 의미                                                | 현재 값                             |
 | ---------------- | ------------------------------------------------- | -------------------------------- |
