--- a/week03/수업.md
+++ b/week03/수업.md
@@ -50,6 +50,8 @@ frames의 shape는 (윈도우 수,3,frame_size)
 frames = np.asarray(frames).reshape(-1, frame_size, N_FEATURES)
 
 ```
+---
+## 파라미터
 
 | 변수               | 의미                                                | 현재 값                             |
 | ---------------- | ------------------------------------------------- | -------------------------------- |
